K8-clusters/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-backend-deployment
  namespace: smart-home-app
  labels:
    app: smart-home-backend
spec:
  replicas: 2 # Number of actual pods
  selector:
    matchLabels:
      app: smart-home-backend
  template:
    metadata:
      labels:
        app: smart-home-backend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi" # Allocate 128 MiB of memory
            cpu: "250m"     # Allocate 250 millicores of CPU
          limits:
            memory: "256Mi" # Limit to 256 MiB of memory
            cpu: "500m"     # Limit to 500 millicores of CPU
      # - name: flask-app
      #   image: python:3.9-slim
      #   command: ["python3", "--version"]
      #   ports:
      #   - containerPort: 5000
      #   resources:
      #     requests:
      #       memory: "128Mi" # Allocate 128 MiB of memory
      #       cpu: "250m"     # Allocate 250 millicores of CPU
      #     limits:
      #       memory: "256Mi" # Limit to 256 MiB of memory
      #       cpu: "500m"     # Limit to 500 millicores of CPU
