K8-clusters/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.31.1  # Latest stable version
          ports:
            - containerPort: 9090  # Prometheus Web UI
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml  # Corrected to mount directly to the file
              subPath: prometheus.yml  # Only mount the file
          # resources:
          #   requests:
          #     memory: "1Gi"
          #     cpu: "500m"
          #   limits:
          #     memory: "2Gi"
          #     cpu: "1"
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
