K8-clusters/backend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
  namespace: smart-home-app
spec:
  selector:
    app: smart-home-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
