K8-clusters/frontend-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: smart-home-nodeport-service
  namespace: smart-home-app
spec:
  selector:
    app: smart-home-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
  type: NodePort
