K8-clusters/frontend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
  namespace: smart-home-app
spec:
  selector:
    app: smart-home-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
